test/expected/perr_redir_truncate_override_no_file.out
shit: 2:8: error: Expected a filename after '>|'.
     2 |  echo >|
       |         ^~ here.
